--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-sendgrid_api_key=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
+SENDGRID=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
