emails working and css on contact form

--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
-SENDGRID=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
+SENDGRID_USERNAME=cbear1325
+SENDGRID_PASSWORD=Footprints1!
+TO=clrnessler@gmail.com
