--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "express": "~4.12.4",
     "jade": "~1.9.2",
     "morgan": "~1.5.3",
-    "sendgrid": "^1.9.1",
+    "nodemailer": "^1.4.0",
+    "sendgrid": "^1.9.2",
     "serve-favicon": "~2.2.1"
   }
 }
